--- a/index.html
+++ b/index.html
@@ -20,9 +20,123 @@
         }
       })();
     </script>
+
+    <!-- Loading styles -->
+    <style>
+      /* Reset and base styles */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+        background-color: #ffffff;
+        color: #000000;
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      /* Dark mode styles */
+      .dark body {
+        background-color: #0a0a0a;
+        color: #ffffff;
+      }
+
+      /* Loading container */
+      .loading-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+
+      /* Loading spinner */
+      .loading-spinner {
+        width: 40px;
+        height: 40px;
+        border: 3px solid transparent;
+        border-top: 3px solid #3b82f6;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin-bottom: 20px;
+      }
+
+      .dark .loading-spinner {
+        border-top-color: #60a5fa;
+      }
+
+      /* Loading text */
+      .loading-text {
+        font-size: 16px;
+        font-weight: 500;
+        color: #6b7280;
+        opacity: 0;
+        animation: fadeInOut 2s ease-in-out infinite;
+      }
+
+      .dark .loading-text {
+        color: #9ca3af;
+      }
+
+      /* Animations */
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      @keyframes fadeInOut {
+        0%, 100% { opacity: 0.5; }
+        50% { opacity: 1; }
+      }
+
+      /* Hide loading when React app loads */
+      .app-loaded .loading-container {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+      }
+
+      /* Logo styles for loading */
+      .loading-logo {
+        width: 60px;
+        height: 60px;
+        margin-bottom: 20px;
+        opacity: 0.8;
+      }
+    </style>
   </head>
   <body>
+    <!-- Loading screen -->
+    <div class="loading-container" id="loading-screen">
+      <img src="/ANlogo.png" alt="AllyNet Logo" class="loading-logo" />
+      <div class="loading-spinner"></div>
+      <div class="loading-text">Loading AllyNet...</div>
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Hide loading screen when React app mounts -->
+    <script>
+      // Hide loading screen once React app has loaded
+      window.addEventListener('load', function() {
+        setTimeout(function() {
+          document.body.classList.add('app-loaded');
+          setTimeout(function() {
+            const loadingScreen = document.getElementById('loading-screen');
+            if (loadingScreen) {
+              loadingScreen.remove();
+            }
+          }, 300);
+        }, 100);
+      });
+    </script>
   </body>
 </html>
